--- a/About.html
+++ b/About.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Arjiel V. Aradillos</title>
+  <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-    
+
+  <div class="hero">
+    <div class="hero-text">
+      <h1>Hi I'm Arjiel V. Aradillos<br></h1>
+      <p1>Here's are thing you can get about myself: <br></p1>
+     
+      <div class="about">
+      <p2 class="aboutme">
+        I am an IT Student in Davao City looking for exciting opportunities. 
+        Likes to focus on accessibility when developing.
+        Passionate and curious about developing programs.
+        Currently, I’m exploring, Web Designing, and Database Management. 
+        While I am not programming, I enjoy playing basketball, Mobile Games and playing Valorant. 
+        Learning more to improve skill for better future.
+      </p2>
+    </div>
+    </div>
+
+    <div class="image">
+      <img src="image/wow.jpg" alt="Profile Picture" />
+    </div>
+  </div>
+
 </body>
 </html>
