i want to commit sir

--- a/About.html
+++ b/About.html
@@ -12,7 +12,8 @@
     <div class="hero-text">
       <h1>Hi I'm Arjiel V. Aradillos<br></h1>
       <p1>Here's are thing you can get about myself: <br></p1>
-     
+
+     <!--Structure sa paragraph -->
       <div class="about">
       <p2 class="aboutme">
         I am an IT Student in Davao City looking for exciting opportunities. 
@@ -24,7 +25,8 @@
       </p2>
     </div>
     </div>
-
+    
+    <!--Structure sa image -->
     <div class="image">
       <img src="image/wow.jpg" alt="Profile Picture" />
     </div>
