--- a/Contact.html
+++ b/Contact.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Contact Me</h1>
+<p>You can reach me at: <strong>arjiel_aradillos@sjp2cd.edu.ph</strong></p>
+
 </body>
 </html>
