--- a/myindex.html
+++ b/myindex.html
@@ -40,7 +40,7 @@
 
   
   <button class="scroll-button" onclick="scrollToSection('contact')">
-    Contact Me
+    Hire me!
   </button>
 
   <!-- Structure ni para Sections -->
